# postgraph

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Secrets.toml.example  railway.toml
docs/superpowers/plans/: 2026-03-11-postgraph-implementation.md  2026-03-13-security-hardening.md  2026-03-13-topic-categories.md  2026-03-15-taxonomy-graph-redesign.md  2026-03-16-heatmap.md  2026-03-31-data-integrity-redesign.md  2026-04-01-debug-tab.md  2026-04-01-fourier-data-integrity.md  2026-04-03-analytics-v2.md  2026-04-04-insights-tab.md  2026-04-05-trends-tab-part1-scraper.md  2026-04-05-trends-tab-part2-integration.md  2026-04-06-emotional-pulse.md  2026-04-07-compose-tab.md  2026-04-09-replies-tab.md  2026-04-09-reply-detection.md
postgraph-server/: Cargo.toml
postgraph-server/migrations/: 001_initial_schema.sql  002_add_views.sql  003_add_shares.sql  004_add_views_to_snapshots.sql  005_add_categories.sql  006_delete_reposts.sql  007_delete_remaining_reposts.sql  008_taxonomy_redesign.sql  009_recover_views_highwater.sql  010_user_insights.sql  011_daily_views.sql  012_insights_reports.sql  013_add_emotion_column.sql  014_emotion_narratives.sql  015_scheduled_posts.sql  016_replies.sql
postgraph-server/src/: analysis.rs  auth.rs  compose.rs  db.rs  emotions.rs  error.rs  graph.rs  insights.rs  main.rs  mercury.rs  replies.rs  state.rs  sync.rs  threads.rs  types.rs
postgraph-server/src/routes/: analytics.rs  analyze.rs  categorize.rs  compose.rs  emotions.rs  graph.rs  health.rs  insights.rs  mod.rs  posts.rs  reanalyze.rs  replies.rs  subjects.rs  sync.rs
postgraph-server/tests/: views_accuracy.rs
web/: .env.example  package-lock.json  package.json
web/src/: hooks.server.ts
(+90 files in other folders)
