[package]
name = "postgraph-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
shuttle-axum = "0.51"
shuttle-runtime = "0.51"
shuttle-shared-db = { version = "0.51", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
